--- a/index.html
+++ b/index.html
@@ -10,6 +10,38 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header class="header">
+        <div class="header__inner">
+            <a class="header__logo" href="./index.html">
+                <img class="header__logo-img" src="./images/svg/site-logo.svg" alt="California site logotip" width="170" height="21">
+            </a>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">all products</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Solutions</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Support</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="header__btn-wrapper">
+                <button class="search-btn">
+                    <img src="./images/svg/search.svg" aria-hidden="true" width="24" height="24">
+                </button>
+                <button class="cart-btn">
+                    <img src="./images/svg/cart.svg" aria-hidden="true" width="24" height="24">
+                </button>
+            </div>
+        </div>
+    </header>
+    <!-- HEADER END -->
 </body>
 </html>
