add site header responsives

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <button class="cart-btn">
                     <img src="./images/svg/cart.svg" aria-hidden="true" width="24" height="24">
                 </button>
+                <button class="burger">
+                    <img src="./images/png/burger-btn.png" alt="Burger button" width="24" height="24">
+                </button>
             </div>
         </div>
     </header>
