add hero section

--- a/index.html
+++ b/index.html
@@ -46,5 +46,25 @@
         </div>
     </header>
     <!-- HEADER END -->
+
+    <!-- MAIN -->
+    <main class="main">
+        
+        <section class="hero">
+            <div class="hero__content">
+                <h1 class="hero__title">The new phones are here take a look.</h1>
+                <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis.</p>
+                <a class="hero__btn" href="#">Explore</a>
+            </div>
+            <img class="hero__img" src="./images/png/hero-img.png" srcset="./images/png/hero-img.png 1x, ./images/png/hero-img@2x.png 2x" alt="iPhone 13 pro rasmi" width="647" height="550">
+            <div class="hero__hr-wrapper">
+                <span class="hero__hr"></span>
+                <span class="hero__hr"></span>
+                <span class="hero__hr"></span>
+            </div>
+        </section>
+
+    </main>
+    <!-- MAIN END -->
 </body>
 </html>
