add sale section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <!-- MAIN -->
     <main class="main">
         
+        <!-- HERO -->
         <section class="hero">
             <div class="hero__content">
                 <h1 class="hero__title">The new phones are here take a look.</h1>
@@ -63,6 +64,46 @@
                 <span class="hero__hr"></span>
             </div>
         </section>
+        <!-- HERO END -->
+
+        <!-- CATIGORIES -->
+        <section class="catigories">
+            <div class="catigories__inner">
+                <h2 class="catigories__title">Shop our latest offers and categories</h2>
+                <p class="catigories__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque in est dui, aliquam, tempor. Faucibus morbi turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <ul class="catigories__list">
+                    <!-- CATIGORIES ITEM 1 -->
+                    <li class="catigories__item-left">
+                        <img src="./images/jpg/laptop.jpg" alt="Laptop" srcset="./images/jpg/laptop.jpg 1x, ./images/jpg/laptop@2x.jpg 2x">
+                        <h3 class="catigories__left-subtitle">Laptops</h3>
+                        <h2 class="catigories__left-title">True Laptop<br> Solution</h2>
+                    </li>
+                    <!-- CATIGORIES ITEM 2 -->
+                    <li class="catigories__item-left">
+                        <img src="./images/jpg/watch.jpg" alt="Laptop" srcset="./images/jpg/watch.jpg 1x, ./images/jpg/watch@2x.jpg 2x">
+                        <div>
+                            <h3 class="catigories__left-subtitle">Watch</h3>
+                            <h2 class="catigories__left-title">Not just<br> stylisht</h2>
+                        </div>
+                    </li>
+                    <!-- CATIGORIES ITEM 3 -->
+                    <li class="catigories__item-right">
+                        <img src="./images/jpg/phone.jpg" alt="Laptop" srcset="./images/jpg/phone.jpg 1x, ./images/jpg/phone@2x.jpg 2x">
+                        <h3 class="catigories__left-subtitle">Phones</h3>
+                        <h2 class="catigories__left-title">Your day to day<br> life</h2>
+                    </li>
+                    <!-- CATIGORIES ITEM 3 -->
+                    <li class="catigories__item-right">
+                        <img src="./images/jpg/ipad.jpg" alt="Laptop" srcset="./images/jpg/ipad.jpg 1x, ./images/jpg/ipad@2x.jpg 2x">
+                        <div>
+                            <h3 class="catigories__left-subtitle">Tablet</h3>
+                            <h2 class="catigories__left-title">Empower your<br> work</h2>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- CATIGORIES END -->
 
     </main>
     <!-- MAIN END -->
