add best section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,41 @@
         </section>
         <!-- SALES END -->
 
+        <!-- BEST -->
+        <section class="best">
+            <div class="best__inner">
+                <h2 class="best__title">See the best around here</h2>
+                <h3 class="best__subtitle">Our new Limited Edition Winter Design BESPOKE 4-Door Flex™</h3>
+                <ul class="best__list">
+                    <!-- ITEM 1 -->
+                    <li class="best__item">
+                        <h3 class="best__item-subtitle">Smart light bulb pack</h3>
+                        <h2 class="best__item-title">Latest and gratest</h2>
+                        <a class="best__item-btn" href="#">Explore</a>
+                        <img class="best__item-img" src="./images/png/watch-even.png"
+                        srcset="./images/png/watch-even.png 1x, ./images/png/watch-even@2x.png 2x" alt="watch-even" width="259" height="250">
+                    </li>
+                    <!-- ITEM 2 -->
+                    <li class="best__item">
+                        <h3 class="best__item-subtitle">Smart light bulb pack</h3>
+                        <h2 class="best__item-title">Best selling</h2>
+                        <a class="best__item-btn" href="#">Explore</a>
+                        <img class="best__item-img" src="./images/png/gadgets.png"
+                        srcset="./images/png/gadgets.png 1x, ./images/png/gadgets@2x.png 2x" alt="gadgets" width="294" height="250">
+                    </li>
+                    <!-- ITEM 3 -->
+                    <li class="best__item">
+                        <h3 class="best__item-subtitle">Smart light bulb pack</h3>
+                        <h2 class="best__item-title">Every product</h2>
+                        <a class="best__item-btn" href="#">Explore</a>
+                        <img class="best__item-img" src="./images/png/devices.png"
+                        srcset="./images/png/devices.png 1x, ./images/png/devices@2x.png 2x" alt="devices" width="355" height="250">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- BEST END -->
+
     </main>
     <!-- MAIN END -->
 </body>
