--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <!-- SALE ITEM 1 -->
                     <li class="sales__item">
                         <div class="sales__item-frame">
-                            <img class="sales__item-img" src="./images/jpg/macbook-pro.png" alt="macbook-pro" srcset="./images/jpg/macbook-pro.png 1x, ./images/jpg/macbook-pro@2x.png 2x" width="247" height="214">
+                            <img class="sales__item-img" src="./images/jpg/macbook-pro.png" alt="macbook-pro" srcset="./images/jpg/macbook-pro.png 1x, ./images/jpg/macbook-pro@2x.jpg 2x" width="247" height="214">
                         </div>
                         <h3 class="sales__item-title">MacBook Pro 13</h3>
                         <p class="sales__item-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
@@ -123,7 +123,7 @@
                     <!-- SALE ITEM 2 -->
                     <li class="sales__item">
                         <div class="sales__item-frame">
-                            <img class="sales__item-img" src="./images/jpg/smart-watch.png" alt="smart-watch" srcset="./images/jpg/smart-watch.png 1x, ./images/jpg/smart-watch@2x.png 2x" width="247" height="214">
+                            <img class="sales__item-img" src="./images/jpg/smart-watch.png" alt="smart-watch" srcset="./images/jpg/smart-watch.png 1x, ./images/jpg/smart-watch@2x.jpg 2x" width="247" height="214">
                         </div>
                         <h3 class="sales__item-title">Smart Galaxy Watch 3</h3>
                         <p class="sales__item-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
@@ -132,7 +132,7 @@
                     <!-- SALE ITEM 3 -->
                     <li class="sales__item">
                         <div class="sales__item-frame">
-                            <img class="sales__item-img" src="./images/jpg/macbook-air.png" alt="macbook-air" srcset="./images/jpg/macbook-air.png 1x, ./images/jpg/macbook-air@2x.png 2x" width="247" height="214">
+                            <img class="sales__item-img" src="./images/jpg/macbook-air.png" alt="macbook-air" srcset="./images/jpg/macbook-air.png 1x, ./images/jpg/macbook-air@2x.jpg 2x" width="247" height="214">
                         </div>
                         <h3 class="sales__item-title">MacBook Air M1</h3>
                         <p class="sales__item-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
@@ -141,7 +141,7 @@
                     <!-- SALE ITEM 4 -->
                     <li class="sales__item">
                         <div class="sales__item-frame">
-                            <img class="sales__item-img" src="./images/jpg/tablet.png" alt="tablet" srcset="./images/jpg/tablet.png 1x, ./images/jpg/tablet@2x.png 2x" width="247" height="214">
+                            <img class="sales__item-img" src="./images/jpg/tablet.png" alt="tablet" srcset="./images/jpg/tablet.png 1x, ./images/jpg/tablet@2x.jpg 2x" width="247" height="214">
                         </div>
                         <h3 class="sales__item-title">iPad</h3>
                         <p class="sales__item-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
