--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@
         </section>
         <!-- BEST END -->
 
+        <!-- IDEAS -->
+        <section class="ideas">
+            <div class="ideas__inner">
+                <h2 class="ideas__title">Ideas have a place here</h2>
+                <p class="ideas__subtitle">Our new Limited Edition Winter Design BESPOKE 4-Door Flex™</p>
+                <div class="ideas__content">
+                    <img class="ideas__img" src="./images/jpg/ideas-img.jpg" alt="ideas img" srcset="./images/jpg/ideas-img.jpg 1x, ./images/jpg/ideas-img@2x.jpg 2x">
+                    <div class="ideas__content-left">
+                        <p class="ideas__text">We Make It Easy To Find The Great Design Talent, Easier...</p>
+                        <p class="ideas__text">Road Design Handbook For The International Road...</p>
+                        <p class="ideas__text">The Best Kept Secrets About Creative People</p>
+                        <p class="ideas__text">We Make It Easy To Find The Great Design Talent, Easier...</p>
+                    </div>
+                </div>
+                <a class="ideas__see-all" href="#">
+                    <span class="ideas__see-all-text">See all</span>
+                    <img src="./images/svg/see-all.svg" alt="arrow top right" width="30" height="28">
+                </a>
+            </div>
+        </section>
+        <!-- IDEAS END -->
+
     </main>
     <!-- MAIN END -->
 </body>
