add register section

--- a/index.html
+++ b/index.html
@@ -209,6 +209,44 @@
         </section>
         <!-- IDEAS END -->
 
+        <!-- SEARCH -->
+        <section class="search">
+            <h2 class="search__title">Looking for anything else?</h2>
+            <form class="search__form">
+                <input class="search__input" type="search" name="search" placeholder="Search keyword" aria-label="search" required>
+            </form>
+            <div class="search__btn-wrapper">
+                <ul class="search__btn-list">
+                    <li class="search__btn-item">iPhone</li>
+                    <li class="search__btn-item">Charger</li>
+                    <li class="search__btn-item">Gift</li>
+                    <li class="search__btn-item">Google Pixel 3</li>
+                    <li class="search__btn-item">Keyboard</li>
+                
+                
+                    <li class="search__btn-item">13 Pro Max</li>
+                    <li class="search__btn-item">iPhone 12</li>
+                    <li class="search__btn-item">Laptop</li>
+                    <li class="search__btn-item">Mobile</li>
+                </ul>
+            </div>
+        </section>
+        <!-- SEARCH END -->
+
+        <!-- REGIST -->
+        <section class="register">
+            <div class="register__inner">
+                <h2 class="register__title">Never miss a thing</h2>
+                <p class="register__subtitle">Sign up for texts to be notified about our best offers on the perfect gifts.</p>
+                <img class="register__img" src="./images/png/register-img.png" alt="register-img" srcset="./images/png/register-img.png 1x, ./images/png/register-img@2x.png 2x" width="233" height="200">
+                <form class="register__form">
+                    <input class="register__input" type="email" placeholder="Your email" name="email" required aria-label="email">
+                    <button class="register__btn">Sign up</button>
+                </form>
+            </div>
+        </section>
+        <!-- REGIST END -->
+
     </main>
     <!-- MAIN END -->
 </body>
