add site footer section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>California || Landing Page</title>
+    <link rel="shortcut icon" href="./images/png/c-icon.png" type="image/x-icon">
     <!-- STYLES CSS -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -249,5 +250,91 @@
 
     </main>
     <!-- MAIN END -->
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer__inner">
+            <div class="footer__top">
+                <div class="footer__top-text-wrapper">
+                    <a class="footer__logo" href="./index.html">
+                        <img class="footer__logo-img" src="./images/svg/site-logo.svg" alt="California site logotip" width="181" height="22">
+                    </a>
+                    <p class="footer__top-text">Sign up for texts to be notified about our best offers on the perfect gifts.</p>
+                </div>
+                <ul class="footer__top-list">
+                    <h2 class="footer__top-title">All products</h2>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Phones</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Watch</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Tablet</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Laptops</a>
+                    </li>
+                </ul>
+                <ul class="footer__top-list">
+                    <h2 class="footer__top-title">Company</h2>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">About</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Support</a>
+                    </li>
+                </ul>
+                <ul class="footer__top-list">
+                    <h2 class="footer__top-title">Support</h2>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Style Guide</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Licensing</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Change Log</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Contact</a>
+                    </li>
+                </ul>
+                <ul class="footer__top-list">
+                    <h2 class="footer__top-title">Follow Us</h2>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Instagram</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Facebook</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">LinkedIn</a>
+                    </li>
+                    <li class="footer__top-item">
+                        <a class="footer__top-link" href="#">Youtube</a>
+                    </li>
+                </ul>
+            </div>
+            <hr class="footer__hr">
+            <div class="footer__bottom">
+                <div class="footer__bottom-text-wrapper">
+                    <h3 class="footer__bottom-text">Made By:</h3>
+                    <a class="footer__bottom-link" href="#">
+                        <span class="footer__bottom-link-text">Azwedo</span>
+                        <img src="./images/svg/see-all.svg" alt="arrow top right" width="30" height="28">
+                    </a>
+                </div>
+                <div class="footer__bottom-text-wrapper">
+                    <h3 class="footer__bottom-text">Powered by:</h3>
+                    <a class="footer__bottom-link" href="#">
+                        <span class="footer__bottom-link-text">Webflow</span>
+                        <img src="./images/svg/see-all.svg" alt="arrow top right" width="30" height="28">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER END -->
 </body>
 </html>
